# swatter

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  docker-compose.prod.yaml
.github/workflows/: ci.yml
conformance/bun/: package.json  send_error.ts
conformance/cpp/: CMakeLists.txt  send_error.cpp
conformance/elixir/: mix.exs  send_error.exs
conformance/elixir/config/: config.exs
conformance/erlang/: send_error.escript
conformance/go/: go.mod  main.go
conformance/node/: package.json  send_error.js  send_transaction.js
conformance/python/: send_error.py
conformance/rust/: Cargo.toml
conformance/rust/src/: main.rs
conformance/sourcemaps/: app.js  build.mjs  package.json
docker/: entrypoint.sh
docs/: ARCHITECTURE.md  BENCHMARKS.md  DEPLOY.md  ROADMAP.md
docs/adr/: 0001-sentry-ingest-protocol.md  0002-backend-runtime-elixir.md  0003-storage-postgres-clickhouse.md  0004-deployment-self-hosted.md  0005-ingest-queue.md  0006-event-grouping.md  0007-dashboard-auth.md  0008-dashboard-api.md  0009-rate-limiting.md  0011-js-symbolication.md  0012-artifact-upload.md  0013-alerting-engine.md  0014-tracing-data-model.md  0016-ai-issue-analysis.md  0017-mcp-server.md  README.md  template.md
server/: .gitignore  README.md  mix.exs
server/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
server/lib/: swatter.ex  swatter_web.ex
server/lib/swatter/: accounts.ex  ai.ex  alerts.ex  repo.ex  (+13 more)
server/priv/: openapi.json
server/test/: test_helper.exs
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx  index.css
(+126 files in other folders)
